--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -1,6 +1,6 @@
 server {
     index index.php;
-    server_name oauth2-google.example;
+    server_name oauth2-google.devbox.tk;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/html/public;
