--- a/code/config/packages/security.yaml
+++ b/code/config/packages/security.yaml
@@ -14,6 +14,11 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
+            logout:
+                path:   app_logout
+            guard:
+                authenticators:
+                    - App\Security\GoogleAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -25,4 +30,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
